<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>de.swiesend</groupId>
        <artifactId>secret-service-parent</artifactId>
        <version>3.0.0-alpha</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>secret-service-hardened-tpm2</artifactId>
    <packaging>jar</packaging>

    <name>secret-service-hardened-tpm2</name>
    <description>
        Optional TPM 2.0 KeyMaterialProvider for secret-service-hardened.
        Ships classpath-only (no module-info.java) because Microsoft TSS.Java
        places a class in the unnamed package and therefore cannot be loaded
        as a JPMS module. Consumers add this artifact plus TSS.Java to their
        runtime classpath to seal the hardened wrapper's pepper inside a TPM.
    </description>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>de.swiesend</groupId>
            <artifactId>secret-service-hardened</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.microsoft.azure</groupId>
            <artifactId>TSS.Java</artifactId>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>21</release>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
